rustcc/tests/input/parser/invalid/end_before_expr.c
// RUN: ${{rustcc}}
// EXPECT-FAILURE

int main(void) {
    return